--- a/app/src/main/res/drawable/ic_refresh_20dp.xml
+++ b/app/src/main/res/drawable/ic_refresh_20dp.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
     <item
-        android:drawable="@drawable/ic_access_time_24dp"
-        android:width="18dp"
-        android:height="18dp"
-        />
+        android:drawable="@drawable/ic_refresh_24dp"
+        android:width="20dp"
+        android:height="20dp" />
 </layer-list >
