--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -30,7 +30,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/textViewDdayTitle"
+                    android:id="@+id/tvDdayTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
@@ -47,7 +47,7 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/textViewDdayLeft"
+                    android:id="@+id/tvDdayLeft"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="24dp"
@@ -60,7 +60,7 @@
         </com.google.android.material.card.MaterialCardView>
 
         <com.google.android.material.card.MaterialCardView
-            android:id="@+id/materialCardBus"
+            android:id="@+id/materialCardBusInfo"
             style="@style/Widget.MaterialComponents.CardView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -77,7 +77,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/textViewBusTitle"
+                    android:id="@+id/tvBusTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
@@ -94,15 +94,27 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/textViewBusLeft"
+                    android:id="@+id/tvBusLeft"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="24dp"
-                    android:text="7분"
+                    android:text="--분"
                     android:textSize="22dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageButton
+                    android:id="@+id/btnBusInfoRefresh"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:background="?android:selectableItemBackgroundBorderless"
+                    android:tint="@color/colorAccent"
+                    app:layout_constraintBottom_toBottomOf="@+id/tvBusLeft"
+                    app:layout_constraintEnd_toStartOf="@+id/tvBusLeft"
+                    app:layout_constraintTop_toTopOf="@+id/tvBusLeft"
+                    app:srcCompat="@drawable/ic_refresh_20dp" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </com.google.android.material.card.MaterialCardView>
 
@@ -118,14 +130,14 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/materialCardBus">
+            app:layout_constraintTop_toBottomOf="@+id/materialCardBusInfo">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/textViewMealTitle"
+                    android:id="@+id/tvMealTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
@@ -144,7 +156,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginEnd="4dp"
-                    android:background="@drawable/shape_circle"
+                    android:background="?android:selectableItemBackgroundBorderless"
                     android:tint="@color/colorAccent"
                     app:layout_constraintBottom_toBottomOf="@+id/tvMealDate"
                     app:layout_constraintEnd_toStartOf="@+id/tvMealDate"
@@ -160,7 +172,7 @@
                     android:textColor="@color/colorAccent"
                     android:textSize="17dp"
                     android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="@+id/textViewMealTitle"
+                    app:layout_constraintBottom_toBottomOf="@+id/tvMealTitle"
                     app:layout_constraintEnd_toStartOf="@+id/btnMealDateAfter" />
 
                 <ImageButton
@@ -168,7 +180,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginEnd="16dp"
-                    android:background="@drawable/shape_circle"
+                    android:background="?android:selectableItemBackgroundBorderless"
                     android:tint="@color/colorAccent"
                     app:layout_constraintBottom_toBottomOf="@+id/tvMealDate"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -187,7 +199,7 @@
                     app:layout_constraintBottom_toTopOf="@id/indicatorMeal"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textViewMealTitle" />
+                    app:layout_constraintTop_toBottomOf="@+id/tvMealTitle" />
 
                 <com.pm10.library.CircleIndicator
                     android:id="@+id/indicatorMeal"
@@ -230,7 +242,7 @@
                 android:layout_height="match_parent">
 
                 <TextView
-                    android:id="@+id/textViewScheduleTitle"
+                    android:id="@+id/tvScheduleTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
@@ -256,7 +268,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/textViewScheduleTitle">
+                    app:layout_constraintTop_toBottomOf="@id/tvScheduleTitle">
 
                     <TableRow
                         android:layout_width="match_parent"
