D-DAY 기능 PreferenceScreen 기초 작업

--- a/app/src/main/res/xml/preference.xml
+++ b/app/src/main/res/xml/preference.xml
@@ -11,15 +11,20 @@
             app:title="D-DAY 기능 켜기"
             app:summary="D-DAY 기능을 켭니다."/>
 
-        <Preference
-            app:key="dday_set_title"
-            app:title="D-DAY 목표 제목 설정"
-            app:summary="D-DAY 목표의 제목을 설정합니다."/>
+        <ListPreference
+            app:key="dday_option"
+            app:dependency="dday_enabled"
+            app:title="보여줄 내용 선택"
+            app:summary="%s"
+            app:entries="@array/dDayOption"
+            app:entryValues="@array/dDayOptionValue"
+            app:defaultValue="0" />
 
         <Preference
-            app:key="dday_set_date"
-            app:title="D-DAY 목표 날짜 설정"
-            app:summary="D-DAY 목표의 날짜를 설정합니다."/>
+            app:key="dday_download"
+            app:dependency="dday_enabled"
+            app:title="정보 가져오기"
+            app:summary="D-DAY 정보를 가져오거나 새로 고칩니다."/>
 
     </PreferenceCategory>
 
@@ -38,14 +43,14 @@
         app:key="school_meal_category"
         app:title="급식">
 
-        <SwitchPreferenceCompat
+        <CheckBoxPreference
             app:key="school_meal_auto"
-            app:title="급식 자동으로 가져오기"
+            app:title="자동으로 가져오기"
             app:summary="저장된 급식이 없을경우 자동으로 가져옵니다."/>
 
         <Preference
             app:key="school_meal_download"
-            app:title="급식 가져오기"
+            app:title="정보 가져오기"
             app:summary="급식 정보를 가져오거나 새로 고칩니다."/>
 
     </PreferenceCategory>
@@ -54,14 +59,14 @@
         app:key="school_event_category"
         app:title="학사일정">
 
-        <SwitchPreferenceCompat
+        <CheckBoxPreference
             app:key="school_event_auto"
-            app:title="학사일정 자동으로 가져오기"
+            app:title="자동으로 가져오기"
             app:summary="저장된 학사일정이 없을경우 자동으로 가져옵니다."/>
 
         <Preference
             app:key="school_event_download"
-            app:title="학사일정 가져오기"
+            app:title="정보 가져오기"
             app:summary="학사일정 정보를 가져오거나 새로 고칩니다."/>
 
     </PreferenceCategory>
