--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -2,7 +2,6 @@
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/grey_50">
@@ -13,7 +12,7 @@
         android:orientation="vertical">
 
         <com.google.android.material.card.MaterialCardView
-            android:id="@+id/materialCardDday"
+            android:id="@+id/materialCardDDay"
             style="@style/Widget.MaterialComponents.CardView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -30,7 +29,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/tvDdayTitle"
+                    android:id="@+id/tvDDayTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
@@ -47,7 +46,7 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/tvDdayLeft"
+                    android:id="@+id/tvDDayLeft"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="24dp"
@@ -70,7 +69,7 @@
             app:cardElevation="2dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/materialCardDday">
+            app:layout_constraintTop_toBottomOf="@+id/materialCardDDay">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -144,7 +143,7 @@
                     android:layout_marginTop="16dp"
                     android:drawablePadding="5dp"
                     android:drawableTint="@color/colorAccent"
-                    android:text="급식"
+                    android:text="@string/meal"
                     android:textColor="@color/colorAccent"
                     android:textSize="24dp"
                     app:drawableLeftCompat="@drawable/ic_restaurant_menu_24dp"
@@ -249,7 +248,7 @@
                     android:layout_marginTop="16dp"
                     android:drawablePadding="5dp"
                     android:drawableTint="@color/colorAccent"
-                    android:text="시간표"
+                    android:text="@string/schedule"
                     android:textColor="@color/colorAccent"
                     android:textSize="24dp"
                     app:drawableLeftCompat="@drawable/ic_access_time_24dp"
