--- a/app/src/main/res/layout/item_event_card.xml
+++ b/app/src/main/res/layout/item_event_card.xml
@@ -14,7 +14,7 @@
         android:layout_marginBottom="@dimen/mtrl_card_spacing"
         app:cardElevation="2dp">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -26,9 +26,9 @@
 
             <LinearLayout
                 android:id="@+id/linearLayout2"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_marginStart="16dp"
                 android:gravity="center"
                 android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -59,9 +59,9 @@
                 android:id="@+id/event"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_weight="5"
 
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="16dp"
                 android:text="겨울방학"
                 android:textColor="@color/textDarkPrimary"
                 android:textSize="20dp"
@@ -70,7 +70,7 @@
                 app:layout_constraintStart_toEndOf="@+id/linearLayout2"
                 app:layout_constraintTop_toTopOf="@+id/linearLayout2" />
 
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </com.google.android.material.card.MaterialCardView>
 
