--- a/app/src/main/res/layout/fragment_post_viewer.xml
+++ b/app/src/main/res/layout/fragment_post_viewer.xml
@@ -26,7 +26,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
         android:text="학생부"
-        android:textColor="@color/colorAccent"
+        android:textColor="?android:colorAccent"
         android:textSize="15dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title" />
@@ -38,12 +38,12 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="24dp"
         android:drawablePadding="5dp"
-        android:drawableTint="@color/colorAccent"
+        android:drawableTint="?android:colorAccent"
         android:gravity="center"
         android:includeFontPadding="false"
         android:lineSpacingExtra="8sp"
         android:text="2020. 02. 08."
-        android:textColor="@color/colorAccent"
+        android:textColor="?android:colorAccent"
         android:textSize="15dp"
         app:drawableStartCompat="@drawable/ic_access_time_18dp"
         app:layout_constraintEnd_toEndOf="parent"
