--- a/app/src/main/res/drawable/splash_background.xml
+++ b/app/src/main/res/drawable/splash_background.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" android:opacity="opaque">
 
-    <item android:drawable="@color/colorPrimary" />
+    <item android:drawable="?android:colorPrimary" />
 
     <item android:drawable="@drawable/ic_directions_bus_24dp"
             android:gravity="center"/>
