--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,15 +1,60 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+    <style name="AppThemeGreen" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="colorPrimary">@color/greenPrimary</item>
+        <item name="colorPrimaryDark">@color/greenPrimary</item>
+        <item name="colorAccent">@color/greenAccent</item>
+    </style>
+    <style name="AppThemeRed" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="colorPrimary">@color/redPrimary</item>
+        <item name="colorPrimaryDark">@color/redPrimary</item>
+        <item name="colorAccent">@color/redAccent</item>
+    </style>
+    <style name="AppThemePink" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="colorPrimary">@color/pinkPrimary</item>
+        <item name="colorPrimaryDark">@color/pinkPrimary</item>
+        <item name="colorAccent">@color/pinkAccent</item>
+    </style>
+    <style name="AppThemePurple" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="colorPrimary">@color/purplePrimary</item>
+        <item name="colorPrimaryDark">@color/purplePrimary</item>
+        <item name="colorAccent">@color/purpleAccent</item>
+    </style>
+    <style name="AppThemeIndigo" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="colorPrimary">@color/indigoPrimary</item>
+        <item name="colorPrimaryDark">@color/indigoPrimary</item>
+        <item name="colorAccent">@color/indigoAccent</item>
+    </style>
+    <style name="AppThemeBlue" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="colorPrimary">@color/bluePrimary</item>
+        <item name="colorPrimaryDark">@color/bluePrimary</item>
+        <item name="colorAccent">@color/blueAccent</item>
+    </style>
+    <style name="AppThemeTeal" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="colorPrimary">@color/tealPrimary</item>
+        <item name="colorPrimaryDark">@color/tealPrimary</item>
+        <item name="colorAccent">@color/tealAccent</item>
+    </style>
+    <style name="AppThemeOrange" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="colorPrimary">@color/orangePrimary</item>
+        <item name="colorPrimaryDark">@color/orangePrimary</item>
+        <item name="colorAccent">@color/orangeAccent</item>
+    </style>
+    <style name="AppThemeBrown" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="colorPrimary">@color/brownPrimary</item>
+        <item name="colorPrimaryDark">@color/brownPrimary</item>
+        <item name="colorAccent">@color/brownAccent</item>
+    </style>
+    <style name="AppThemeBlueGrey" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="colorPrimary">@color/blueGreyPrimary</item>
+        <item name="colorPrimaryDark">@color/blueGreyPrimary</item>
+        <item name="colorAccent">@color/blueGreyAccent</item>
     </style>
 
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
         <item name="android:windowBackground">@drawable/splash_background</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimary">@color/white</item>
+        <item name="colorPrimaryDark">@color/white</item>
     </style>
 </resources>
