--- a/app/src/main/res/layout/item_event_card.xml
+++ b/app/src/main/res/layout/item_event_card.xml
@@ -19,10 +19,10 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="horizontal"
-            android:paddingStart="8dp"
-            android:paddingTop="16dp"
+            android:paddingStart="4dp"
+            android:paddingTop="10dp"
             android:paddingEnd="8dp"
-            android:paddingBottom="16dp">
+            android:paddingBottom="10dp">
 
             <LinearLayout
                 android:id="@+id/linearLayout2"
@@ -40,6 +40,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif"
+                    android:includeFontPadding="false"
                     android:text="18"
                     android:textColor="?android:colorAccent"
                     android:textSize="30dp"
