--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,33 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="greenPrimary">#2E7D32</color>
+    <color name="greenPrimaryDark">#005005</color>
     <color name="greenAccent">#60AD5E</color>
 
     <color name="redPrimary">#f44336</color>
+    <color name="redPrimaryDark">#ba000d</color>
     <color name="redAccent">#ff7961</color>
 
     <color name="pinkPrimary">#e91e63</color>
+    <color name="pinkPrimaryDark">#b0003a</color>
     <color name="pinkAccent">#ff6090</color>
 
     <color name="purplePrimary">#9c27b0</color>
+    <color name="purplePrimaryDark">#6a0080</color>
     <color name="purpleAccent">#d05ce3</color>
 
     <color name="indigoPrimary">#3f51b5</color>
+    <color name="indigoPrimaryDark">#002984</color>
     <color name="indigoAccent">#757de8</color>
 
     <color name="bluePrimary">#1e88e5</color>
+    <color name="bluePrimaryDark">#005cb2</color>
     <color name="blueAccent">#6ab7ff</color>
 
     <color name="tealPrimary">#00897b</color>
+    <color name="tealPrimaryDark">#005b4f</color>
     <color name="tealAccent">#4ebaaa</color>
 
     <color name="orangePrimary">#f57c00</color>
+    <color name="orangePrimaryDark">#bb4d00</color>
     <color name="orangeAccent">#ffad42</color>
 
     <color name="brownPrimary">#6d4c41</color>
+    <color name="brownPrimaryDark">#40241a</color>
     <color name="brownAccent">#9c786c</color>
 
     <color name="blueGreyPrimary">#455a64</color>
+    <color name="blueGreyPrimaryDark">#1c313a</color>
     <color name="blueGreyAccent">#718792</color>
 
     <color name="grey">#BBBBBB</color>
